--- a/morellet.html
+++ b/morellet.html
@@ -30,7 +30,7 @@
 	      <label for="initAngle">Init Angle:</label>
               <input value="0" type="number" name="initAngle" step="0.1" min="0" max="1">
 	      <div></div><div class="inputr"><button value="submit" type="submit">Submit</button></div>
-	      <div></div><div><sub><a href="https://en.wikipedia.org/wiki/Fran%C3%A7ois_Morellet">See wikipedia on Morellet</a></sub><div>
+	      <div></div><div><sub><a href="https://en.wikipedia.org/wiki/Fran%C3%A7ois_Morellet">See wikipedia on Morellet</a></sub></div>
         </form>
       </div>
     </div>
