Added svg namespace

--- a/morellet.html
+++ b/morellet.html
@@ -34,7 +34,7 @@
         </form>
       </div>
     </div>
-    <svg id="svg" style="background: white"></svg>
+    <svg id="svg" xmlns:z="http://www.w3.org/2000/svg" style="background: white"></svg>
   </body>
 </html>
 
