--- a/morellet.html
+++ b/morellet.html
@@ -27,6 +27,8 @@
               <input value="2" type="number" name="lineWidth" step="0.1" min="0" max="100">
 	      <label for="lineDistance">Line Distance:</label>
               <input value="25" type="number" name="lineDistance" step="0.1" min="0.1" max="1000">
+	      <label for="initAngle">Transparency:</label>
+              <input value="0.9" type="number" name="transp" step="0.1" min="0.1" max="1">
 	      <label for="initAngle">Init Angle:</label>
               <input value="0" type="number" name="initAngle" step="0.1" min="0" max="1">
 	      <div></div><div class="inputr"><button value="submit" type="submit">Submit</button></div>
